fix: rename and update docs

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tailwindcss-aria",
+  "name": "tw-aria",
   "type": "module",
   "author": "Miquel de Domingo",
   "description": "A Tailwind CSS plugin that adds support for ARIA attributes",
