--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -24,6 +24,12 @@ jobs:
           node-version: 22
       - name: Install
         run: bun install --frozen-lockfile
+
+      - name: Lint
+        run: bun lint
+      - name: Test
+        run: bun run test
+
       - name: Capture New Release Version
         run: |
           bun changeset status --output=release.json
