--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "aria"
   ],
   "module": "./src/index.ts",
+  "types": "./src/index.d.ts",
   "scripts": {
     "lint": "eslint . --max-warnings=0",
     "lint:fix": "eslint . --fix",
